--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="content">
 			<div id="large-header" class="large-header">
 				<canvas id="demo-canvas"></canvas>
-					<h1 class="main-title">Roha</h1>
+					<h1 class="main-title">용순</h1>
            	</div><!-- large-header-->
 		</div><!-- content -->
 	</div><!--container -->
