--- a/index.html
+++ b/index.html
@@ -4,14 +4,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>RohaWebsite</title>
+	<title>yongsunWebsite</title>
 	<link href="css/component.css" rel="stylesheet" type="text/css"/>
   <link href="https://fonts.googleapis.com/css?family=Clicker+Script&display=swap" rel="stylesheet">
-    
- <!--============Favicons ===============-->
-  <link rel="shortcut icon" href="images/favicon1.ico" type="image/x-icon"/>
-  <link rel="apple-touch-icon-precomposed" href="images/favicon.png"/>
- 
+
 
 </head>
 <body>
@@ -20,17 +16,14 @@
 		<div class="content">
 			<div id="large-header" class="large-header">
 				<canvas id="demo-canvas"></canvas>
-					<h1 class="main-title">용순</h1>
+					<h1 class="main-title">yongsun</h1>
            	</div><!-- large-header-->
 		</div><!-- content -->
 	</div><!--container -->
   	<script src="js/demo-2.js"></script>
     <div>
-    	<h1> Roha <span>개발자 Website</span></h1>
-        <!-- <nav class="">
-            <a href="">Demo 1</a>
-            <a href="">Demo 2</a>
-        </nav> -->
+    	<h1> yongsun <span>개발자 Website</span></h1>
+       
 	</div>
 </header>
 <section>
